# iREll

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: irell.py
